--- a/web/src/assets/styles/global.css
+++ b/web/src/assets/styles/global.css
@@ -1,18 +1,16 @@
 :root {
-    --color-background: #F0F0F7;
-    --color-primary-lighter: #9871F5;
-    --color-primary-light: #916BEA;
-    --color-primary: #8257E5;
-    --color-primary-dark: #774DD6;
-    --color-primary-darker: #6842C2;
-    --color-secundary: #04D361;
-    --color-secundary-dark: #04BF58;
-    --color-title-in-primary: #FFFFFF;
-    --color-text-in-primary: #D4C2FF;
-    --color-text-title: #32264D;
-    --color-text-complement: #9C98A6;
-    --color-text-base: #6A6180;
-    --color-line-in-white: #E6E6F0;
+    --color-primary-lighter: #7b7785;
+    --color-primary-light: #5a5664;
+    --color-primary: #312d38;
+    --color-primary-dark: #24252e;
+    --color-primary-darker: #100f11;
+    --color-secondary-light: #55ee9a;
+    --color-secondary: #04D361;
+    --color-secondary-dark: #04BF58;
+    --color-secondary-darker: #20442654;
+    --color-title-in-primary: #1a1717;
+    --color-grey: #9C98A6;
+    --color-white: #E6E6F0;
     --color-input-background: #F8F8FC;
     --color-button-text: #FFFFFF;
     --color-box-base: #FFFFFF;
@@ -32,7 +30,7 @@ html,body,#root{
 }
 
 body{
-    background: var(--color-background);
+    background: var(--color-primary-lighter);
 }
 
 #root{
@@ -43,7 +41,7 @@ body{
 
 body,input,button,textarea{
     font: 500 1.6rem Poppins;
-    color: var(--color-text-base);
+    color: var(--color-secondary-dark);
 }
 
 .container{
