--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -1,3 +1,55 @@
-#page-landing{
+.page-landing{
+    background: var(--color-grey);
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+}
 
+.div-content{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.backgroundImg{
+    border-radius: 5rem;
+    width: 100%;
+}
+
+.text-landing{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+}
+
+h1,h2{
+    color: var(--color-secondary-light);
+    text-shadow: 0.3rem 0.3rem var(--color-primary-darker);
+}
+
+@media(min-width: 700px){
+    .div-content{
+        flex-direction: row;
+        width: 100%;
+    }
+    .backgroundImg{
+        width: 50%;
+    }
+    .text-landing{
+        width: 50%;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin: auto;
+        padding-left: 8%;
+    }
+    h1{
+        font-size: 5rem
+    }
 }
