--- a/web/src/components/PlaylistVideos/styles.css
+++ b/web/src/components/PlaylistVideos/styles.css
@@ -17,7 +17,11 @@
     justify-content: center;
     background: var(--color-primary);
     border-radius: 1rem;
+    margin: 1rem;
     padding: 0.5rem;
+}
+
+.video{
 }
 
 @media(min-width: 700px){
