organizing things before videosList

--- a/web/src/components/Playlists/styles.css
+++ b/web/src/components/Playlists/styles.css
@@ -33,6 +33,7 @@
     .text-playlists{
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         align-items: flex-start;
         margin: auto;
     }
