--- a/web/src/pages/CreatePlaylist/styles.css
+++ b/web/src/pages/CreatePlaylist/styles.css
@@ -20,6 +20,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: auto;
     padding: 0.5rem;
 }
 
@@ -29,7 +30,7 @@
 }
 
 .label-input input{
-    width: 70%;
+    width: 100%;
 }
 
 #submit-button{
@@ -50,9 +51,5 @@
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-start;
-    }
-
-    .label-input input{
-        width: 100%;
     }
 }
