search page & add new get

--- a/web/src/components/VideosList/styles.css
+++ b/web/src/components/VideosList/styles.css
@@ -14,8 +14,8 @@
     display: flex;
     background: var(--color-primary);
     border-radius: 1rem;
-    margin: 1rem;
     padding: 0.5rem;
+    margin: 1rem auto;
 }
 
 .playlist-list h2{
