search page fixed

--- a/web/src/pages/SearchPage/styles.css
+++ b/web/src/pages/SearchPage/styles.css
@@ -14,6 +14,8 @@
     margin: 1rem 2rem;
     padding: 1rem;
     background: var(--color-white);
+    align-items: inherit;
+    justify-content: center;
 }
 
 #result{
@@ -31,6 +33,6 @@
     }
 
     .playlist-area{
-        margin: 1rem auto;
+        margin: 1rem 1rem;
     }
 }
