--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -17,7 +17,8 @@
 
 .backgroundImg{
     border-radius: 5rem;
-    width: 100%;
+    margin: 3rem;
+    width: 60%;
 }
 
 .text-landing{
@@ -39,7 +40,10 @@ h1,h2{
         width: 100%;
     }
     .backgroundImg{
-        width: 50%;
+        width: 30%;
+        margin: 5rem;
+        padding: 2rem;
+        margin-left: 7rem;
     }
     .text-landing{
         width: 50%;
